# t

./: .env  .gitignore  package-lock.json  package.json
backend/: .env  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: errors.py  router.py
backend/app/api/dependencies/: __init__.py  db.py  user.py
backend/app/api/routes/: docs.py  items.py  login.py  private.py  users.py  utils.py
backend/app/core/: config.py  db.py  events.py
backend/app/models/: item.py
frontend/: README.md  eslint.config.js  package-lock.json  package.json  quasar.config.ts
frontend/src/boot/: axios.ts  layout.ts  permission.ts  primevue.ts
frontend/src/components/: NewFormDialog.vue  TaskCard.vue
frontend/src/components/BaseContent/: BaseContent.vue
frontend/src/components/Drawer/: Drawer.vue
frontend/src/composables/: eCharts.ts
frontend/src/css/: app.scss
frontend/src/pages/: Chart.vue  ErrorPermissionDenied.vue  Kanboard.vue  Login.vue
frontend/src/router/: constantRoutes.ts  routes.ts
frontend/src/stores/: theme.ts
frontend/src/types/: index.ts
src/boot/: directives.ts  layout.ts  permission.ts
src/components/CountTo/: CountTo.vue
src/components/LottieWeb/: LottieWeb.vue
src/components/Menu/: BaseMenuItem.vue
src/components/Tagview/: Tagview.vue
src/components/Toolbar/: DarkMode.vue  ToolbarItem.vue
src/css/: main.css  quasar.variables.scss
src/layouts/: MainLayout.vue
src/pages/: Login.vue
src/pages/permission/: Permission.vue
src/router/: routes.ts
src/stores/: permission.ts  routes.ts  tagView.ts
(+10 files in other folders)
